syntax = "proto3";

package micropayment;

message SignedTxn {
    string receiver      = 1;
    double amount        = 2;
    int32  billing_cycle = 3;
    string txn_hash      = 4;
    Metadata mtdt        = 5;
}

message Metadata {
   message MtdtVal {
      bool include_signature = 1;
      oneof Val {
         int32 int_val = 2;
         string str_val = 3;
      }
   }
   map<string, MtdtVal> vals = 1;
}

